Fixed the backdrop not showing issue

--- a/src/components/shared/cartNav/styles.module.scss
+++ b/src/components/shared/cartNav/styles.module.scss
@@ -1,21 +1,19 @@
 .cartNav {
   position: fixed;
   height: 100%;
-
   top: 0px;
   // left: -100vw;
   right: -100vw;
   z-index: 999;
   // transition: left 0.4s ease-in-out;
-  transition: right 0.4s ease-in-out;
-
+  transition: right 0.9s ease-in-out;
   background: var(--white);
   display: initial;
   justify-content: stretch;
   align-items: stretch;
   margin-left: 0;
   overflow-y: auto;
-  width: 350px;
+  width: 360px;
 
   &.show {
     // left: 0;
@@ -44,7 +42,7 @@
 
       .flexHead {
         .close {
-          font-size: 25px;
+          font-size: 15px;
         }
       }
     }
