--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -455,36 +455,22 @@ input[type="radio"] {
 
 .backdrop {
   position: fixed;
-  // visibility: hidden;
-  // pointer-events: none;
-  // opacity: 0;
-
   visibility: visible;
   pointer-events: all;
   opacity: 1;
-
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.48);
-  z-index: 5;
+  z-index: 301;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  transition: all 0.4s ease-in-out;
-  // blur property
-  // backdrop-filter: blur(10px);
-  // -webkit-backdrop-filter: blur(10px);
-
-  @media (min-width: 1265px) {
-    display: none;
-  }
-
-  &.show {
-    visibility: visible;
-    pointer-events: all;
-    opacity: 1;
-  }
+  transition: opacity 0.9s ease-in-out 0.9s,
+    backdrop-filter 0.9s ease-in-out 0.9s;
+  // // blur property
+  // backdrop-filter: blur(2px);
+  // -webkit-backdrop-filter: blur(2px);
 }
 
 .backdrop-cart {
